<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditActivity">

    <ImageView
        android:id="@+id/edit_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:tint="@color/myPrimary"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_back">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/edit_profile"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/profile_bg"
            android:scaleType="centerCrop"
            android:src="@drawable/user_profile"
            app:riv_oval="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/edit_picture"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_name"
            style="@style/Base.Theme.Flick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@android:color/transparent"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/name"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/myPrimary"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Base.Theme.Flick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@android:color/transparent"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/username"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/myPrimary"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            android:id="@+id/edit_username"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Base.Theme.Flick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@android:color/transparent"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/email"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/myPrimary"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:id="@+id/edit_email"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            style="@style/Base.Theme.Flick"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@android:color/transparent"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/bio"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/myPrimary"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:endIconMode="clear_text"
            android:id="@+id/edit_bio">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="text"
                android:maxLines="3" />


        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/done_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:backgroundTint="@color/myPrimary"
                android:clickable="true"
                android:elevation="@dimen/_20sdp"
                android:focusable="true"
                android:text="@string/update"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progress_edit"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/myPrimary"
                android:visibility="gone" />

        </FrameLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>