<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/back"
        android:contentDescription="back"
        android:focusable="true"
        android:clickable="true"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        app:tint="@color/myPrimary"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:id="@+id/back_signin"/>


    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/myPrimary"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_signin" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:background="@drawable/profile_bg"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="@id/welcome_back"
        app:layout_constraintStart_toStartOf="@id/welcome_back"
        app:layout_constraintTop_toTopOf="@id/welcome_back"
        android:layout_marginTop="@dimen/_25sdp"
        app:riv_oval="true" />

    <LinearLayout
        android:id="@+id/container_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_20sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_signin"
            app:endIconMode="clear_text"
            android:hint="@string/email"
            app:helperText="Required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent" style="@style/Base.Theme.Flick"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            app:boxStrokeColor="@color/myPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Theme.Flick"
            android:elevation="@dimen/_10sdp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:helperText="Required"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:boxStrokeColor="@color/myPrimary"
            app:boxStrokeWidthFocused="@dimen/_2sdp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/password"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/myPrimary"
                android:clickable="true"
                android:focusable="true"
                android:elevation="@dimen/_20sdp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progress_login"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/myPrimary"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"/>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/create_new_account"
            android:focusable="true"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/create_acc_signin"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>