<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_15sdp"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:weightSum="3">

        <ImageView
            style="@style/imageColor"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/home_profile_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.8"
            android:padding="@dimen/_5sdp"
            android:text="@string/username"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logout"
            style="@style/imageColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0.2"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/logout" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/home_profile_profile"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/profile_bg"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_profile_profile"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_followers_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_profile_profile">

            <TextView
                android:id="@+id/home_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:text="@string/username"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/home_profile_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="5dp"
                android:text="@string/bio" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_editProfile"
            style="@style/Widget.App.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="2"
            android:elevation="@dimen/_10sdp"
            android:text="@string/edit_profile"
            app:cornerRadius="10dp"
            app:rippleColor="@color/myPrimary" />

    </LinearLayout>

    <View
        style="@style/viewBg"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home_profile_tab_layout"
        style="@style/Widget.Material3.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabIconTint="@color/myPrimary"
        app:tabIndicatorColor="@color/myPrimary"
        app:tabRippleColor="@android:color/transparent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>